--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-speech-recognition": "^3.10.0",
-    "regenerator-runtime": "^0.14.1"
+    "react-use-clipboard": "^1.0.9",
+    "regenerator-runtime": "^0.14.1",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
